fixed width on mobile; less margin

--- a/css/style.css
+++ b/css/style.css
@@ -5,11 +5,12 @@ body {
   padding: 0;
   margin: 0 auto;
   height: fit-content;
-  max-width: 60%;
+  max-width: 958px;
+  /* margin-right: 17px; */
 }
 
 .container {
-  margin: 0 auto;
+  margin: 0;
   padding: 0;
 }
 
@@ -52,10 +53,13 @@ body {
 
 #results {
   display: flex;
+  text-align: left;
   flex-direction: column;
   border: 1px solid black;
   border-radius: 1rem;
-  width: fit-content;
+  min-width: 100%;
+  max-width: fit-content;
+  margin: 0;
   max-height: fit-content;
   padding: 10px;
   background-color: white;
@@ -68,8 +72,7 @@ body {
   border-radius: 1rem;
   max-height: fit-content;
   margin: 0 auto;
-  max-width: 55%;
-  padding: 10px;
+  max-width: 85%;
 }
 
 a {
@@ -99,16 +102,17 @@ a {
 
 img {
   border-radius: 1rem;
-  width: 100%;
-  margin: 0;
+  max-width: 100%;
+  margin: 0 auto;
   padding: 0;
   height: auto;
 }
 
 #image {
+  display: flex;
   margin: 0;
   padding: 0;
-  width: fit-content;
+  max-width: fit-content;
 }
 
 h1 {
@@ -144,7 +148,7 @@ p {
   margin: 0 auto;
   margin-top: 25px;
   margin-bottom: 25px;
-  font-size: 25px;
+  font-size: 20px;
 }
 
 #apiNews {
@@ -204,7 +208,6 @@ p {
 #description {
   margin: 5px;
   margin-bottom: 5px;
-  width: 98%;
 }
 
 #title {
@@ -220,7 +223,8 @@ p {
 
 @media only screen and (max-width: 600px) {
   body {
-    max-width: 100%
+    max-width: 100%;
+    margin-right: 18px;
   }
   .input {
     font-size: 7px;
